syntax = "proto3";

package metrics;

option go_package = "metrics/proto";

message Metric {
  string id = 1;

  enum MType {
    GAUGE = 0;
    COUNTER = 1;
  }
  MType mType = 2;
  int64 delta = 3;
  double value = 4;
}

message AddMetricsRequest {
  repeated Metric metrics = 1;
}

message AddMetricsResponse {
  string error = 1; // ошибка
}

service Metrics {
  rpc AddMetrics(AddMetricsRequest) returns (AddMetricsResponse);
}